--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -168,8 +168,8 @@ input[type='radio']:checked + label {
 }
 
 // Product Feedback Component
-.ProductFeedbackComponent {
-  .container {
-    // margin-top: 0;
-  }
-}
+// .ProductFeedbackComponent {
+//   .container {
+// margin-top: 0;
+//   }
+// }
